--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -1,12 +1,11 @@
 name: Hello World
 
 on: push
-  
+
 jobs:
   hello-job:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Echo text
-        run: echo "Hello, World!"
-
+steps:
+  -name: Echo Text
+   run: echo "Hello world!"
