--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -1,11 +1,55 @@
-name: Hello World
-
-on: push
-
+name: Docker CI/CD Pipeline
+ 
+on:
+  push:
+    branches:
+      - main
+ 
 jobs:
-  hello-job:
+  build:
     runs-on: ubuntu-latest
-
+ 
     steps:
-      - name: Echo Text
-        run: echo "Hello world!"
+      - name: Checkout-code
+        uses: actions/check@v2
+ 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+ 
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/webapp
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: code-checkout
+        uses: actions/checkout@v4
+      - name: Login to AWS
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+ 
+      - name: Install SSH Client
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y openssh-client
+ 
+      - name: Add SSH Key
+        run: |
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > github.pem
+          chmod 400 github.pem
+ 
+      - name: Run Command on EC2
+        run: |
+          ssh -o StrictHostKeyChecking=no -i github.pem ubuntu@${{ secrets.EC2_PUBLIC_DNS }} << 'EOF'
+          echo "Running commands on EC2 instance"
+          sudo docker pull ${{ secrets.DOCKER_IMAGE }}
+          sudo docker run -d -p 80:80 ${{ secrets.DOCKER_IMAGE }}
