--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -24,7 +24,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/webapp
+          tags: ${{ secrets.DOCKER_USERNAME }}/newapp
   deploy:
     runs-on: ubuntu-latest
     steps:
