--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -64,6 +64,9 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i github.pem ubuntu@${{ secrets.EC2_PUBLIC_DNS }} << 'EOF'
           echo "Running commands on EC2 instance"
           sudo docker pull ${{ secrets.DOCKER_IMAGE }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
           sudo docker run -d -p 80:80 ${{ secrets.DOCKER_IMAGE }}
           EOF
 
