--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -20,6 +20,6 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
       - name: Build Docker Image
-        run: docker build -t cicd-Pipeline .
+        run: docker build -t cicd-pipeline .
       - name: Push image to DockerHub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline:latest
