--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -22,4 +22,4 @@ jobs:
       - name: Build Docker Image
         run: docker build -t cicd-pipeline .
       - name: Push image to DockerHub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline:latest
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline
