--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -1,25 +1,28 @@
-name: Docker Image
+name: CI Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
 
   build:
-  
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: code checkout
-        uses: actions/checkout@v3
-      - name: Login to Dockerhub
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - name: Build Docker Image
-        run: docker build -t cicd-pipeline .
-      - name: Push image to DockerHub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline
+
+      env:
+        DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+
+    - name:Code checkout
+      uses: actions/checkout@v2
+
+    - name: Login Dockerhub
+      run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      
+    - name: Build the Docker image
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline .
+    - name: Push to Dockerhub
+      run: docker push ${{ secrets.DOCKER_USERNAME}}/cicd-pipeline:latest
