--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -1,18 +1,14 @@
 name: CI Pipeline
-
 on:
   push:
     branches: [ "main" ]
-
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Code checkout
-       uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Login Dockerhub
         run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
