--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -39,6 +39,12 @@ jobs:
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > github.pem
           chmod 400 github.pem
+      - name: Establish SSH connection
+        uses: omarhosny206/setup-ssh-for-ec2@v1.0.0
+        with:
+            EC2_SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+            EC2_URL: https://ec2-54-90-234-166.compute-1.amazonaws.com/
+            
       - name: Run Command on EC2
         run: |
           ssh -o StrictHostKeyChecking=no -i github.pem ubuntu@${{ secrets.EC2_PUBLIC_DNS }} << 'EOF'
