--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -37,17 +37,12 @@ jobs:
           sudo apt-get install -y openssh-client
       - name: Add SSH Key
         run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > github.pem
-          chmod 400 github.pem
-      - name: Establish SSH connection
-        uses: omarhosny206/setup-ssh-for-ec2@v1.0.0
-        with:
-            EC2_SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-            EC2_URL: https://ec2-54-90-234-166.compute-1.amazonaws.com/
-            
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > cicd-pipeline.pem
+          chmod 400 cicd-pipeline.pem
+             
       - name: Run Command on EC2
         run: |
-          ssh -o StrictHostKeyChecking=no -i github.pem ubuntu@${{ secrets.EC2_PUBLIC_DNS }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i cicd-pipeline.pem ubuntu@${{ secrets.EC2_PUBLIC_DNS }} << 'EOF'
           echo "Running commands on EC2 instance"
           sudo docker pull ${{ secrets.DOCKER_IMAGE }}
           sudo docker run -d -p 80:80 ${{ secrets.DOCKER_IMAGE }}
