--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -37,12 +37,12 @@ jobs:
           sudo apt-get install -y openssh-client
       - name: Add SSH Key
         run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > cicd-pipeline.pem
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > pipeline.pem
           chmod 600 cicd-pipeline.pem
              
       - name: Run Command on EC2
         run: |
-          ssh -o StrictHostKeyChecking=no -i cicd-pipeline.pem ubuntu@${{ secrets.EC2_PUBLIC_DNS }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i pipeline.pem ubuntu@${{ secrets.EC2_PUBLIC_DNS }} << 'EOF'
           echo "Running commands on EC2 instance"
           sudo docker pull ${{ secrets.DOCKER_IMAGE }}
           sudo docker run -d -p 80:80 ${{ secrets.DOCKER_IMAGE }}
