--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -44,5 +44,5 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -i pipeline.pem ubuntu@${{ secrets.EC2_PUBLIC_DNS }} << 'EOF'
           echo "Running commands on EC2 instance"
-          sudo docker pull ${{ secrets.DOCKER_IMAGE }}
-          sudo docker run -d -p 80:80 ${{ secrets.DOCKER_IMAGE }}
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline:latest
+          sudo docker run -d -p 80:80 ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline:latest
