--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -45,6 +45,6 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -i pipeline.pem ubuntu@${{ secrets.EC2_PUBLIC_DNS }} << 'EOF'
           echo "Running commands on EC2 instance"
-          sudo docker stop $(docker ps)
+          sudo docker container rm -rf Demo
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline:latest
           sudo docker run --name Demo -d -p 80:80 ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline:latest
