--- a/.github/workflows/hello-word.yaml
+++ b/.github/workflows/hello-word.yaml
@@ -46,5 +46,6 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i pipeline.pem ubuntu@${{ secrets.EC2_PUBLIC_DNS }} << 'EOF'
           echo "Running commands on EC2 instance"
           sudo docker container rm -f Demo
+          Sudo docker rmi Demo
           sudo docker pull ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline:latest
           sudo docker run --name Demo -d -p 80:80 ${{ secrets.DOCKER_USERNAME }}/cicd-pipeline:latest
